# subway-sim

./: Cargo.toml  README.md  package.json  subway-sim-0.1.0.tgz
.github/workflows/: release.yml
scripts/: install.js
src/: main.rs
